# sales-and-stock-analysis-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  anootations.md  docker-compose.yml  mkdocs.yml  processos_e_solucões.md  pyproject.toml  run.py
data/: lojas_hering.csv  produtos_hering.csv  vendas_hering.csv
docs/: processos_e_solucões.md
src/analysis/: analyze_data.py  visualization.py
src/analysis/interfaces/: visualization_interface.py
src/analysis/visualization/: reports_visualizer.py  sales_by_group_visualizer.py  sales_by_region_visualizer.py  sales_velocity_visualizer.py
src/config/: settings.py
src/driver/: dataloader.py
src/driver/interface/: dataloader_interface.py
src/driver/visualization/: sales_by_region_visualizer.py
src/errors/: extract_error.py  load_error.py  transform_error.py
src/infra/: database_connector.py  database_repository.py
src/infra/interface/: database_repository.py
src/main/: main_pipeline.py
src/queries/analysis/: sales_by_branch.sql  sales_by_product.sql  sales_by_region.sql  sales_velocity.sql  top_10_least_sales_by_region.sql  top_10_sales_by_region.sql
src/queries/create/: create_available_stock.sql  create_products.sql  create_sales.sql  create_sales_by_region.sql  create_sales_velocity.sql  create_stock.sql  create_store.sql
src/stages/analysis/: analyze_data.py
src/stages/contracts/: analyze_contract.py  extract_contract.py  load_contract.py  transform_contract.py  transform_data.py
src/stages/extract/: extract_data.py
tests/: conftest.py
tests/config/: settings.py
(+22 files in other folders)
